# biased-split

./: .gitignore  README.md  pyproject.toml
biased_split/: __init__.py  activity_cliff.py  knn_failure.py  molecularnetwork.py  proxy_sorted.py  substructure_distance.py
data/raw/: target_CHEMBL1163125-1.IC50.csv  target_CHEMBL1163125-2.IC50.csv  target_CHEMBL1163125-3.IC50.csv  target_CHEMBL1163125-4.IC50.csv  target_CHEMBL1741186-1.IC50.csv  target_CHEMBL1741186-2.IC50.csv  target_CHEMBL1865-1.IC50.csv  target_CHEMBL1865-2.IC50.csv  target_CHEMBL1974-1.IC50.csv  target_CHEMBL1974-2.IC50.csv  target_CHEMBL203-1.IC50.csv  target_CHEMBL203-2.IC50.csv  target_CHEMBL2039-1.IC50.csv  target_CHEMBL2039-2.IC50.csv  target_CHEMBL2039-3.IC50.csv  target_CHEMBL206-1.IC50.csv  target_CHEMBL2148-1.IC50.csv  target_CHEMBL2148-2.IC50.csv  target_CHEMBL220-1.IC50.csv  target_CHEMBL222-1.IC50.csv  target_CHEMBL222-2.IC50.csv  target_CHEMBL228-1.IC50.csv  target_CHEMBL228-2.IC50.csv  target_CHEMBL240-1.IC50.csv  target_CHEMBL240-2.IC50.csv  target_CHEMBL240-3.IC50.csv  target_CHEMBL2409-1.IC50.csv  target_CHEMBL243-1.IC50.csv  target_CHEMBL247-1.IC50.csv  target_CHEMBL247-2.IC50.csv  target_CHEMBL260-1.IC50.csv  target_CHEMBL260-2.IC50.csv  target_CHEMBL262-1.IC50.csv  target_CHEMBL284-1.IC50.csv  target_CHEMBL284-2.IC50.csv  target_CHEMBL2971-1.IC50.csv  (+30 more)
notebooks/: 00_Data_Source_and_Standardize.ipynb  01_Molecular_Network.ipynb  02_Activity_Cliff_Split.ipynb  03_kNN_Failure_Split.ipynb  04_Substructure_Distance_Split.ipynb  05_Proxy_Sorted_Split.ipynb  molecularnetwork.py
(+67 files in other folders)
